--- a/current-works.html
+++ b/current-works.html
@@ -26,7 +26,7 @@
 
 	<body>
 		<div id="maindiv" class="parallax">
-			<nav class="navbar navbar-inverse navbar-fixed-bottom">
+			<nav class="navbar navbar-default navbar-fixed-top">
 					<div class="container-fluid">
 					    <!-- Brand and toggle get grouped for better mobile display -->
 					    <div class="navbar-header">
@@ -68,7 +68,7 @@
 				<h1> <strong> Current Works </strong> </h1>
 			</div>
 		<div id="slide1">
-			<div class="w3-content w3-display-container" style="max-width:800px">
+			<div class="w3-content w3-display-container" style="max-width:400px, height:300px">
 				  <img class="mySlides" src="GP_GKC_v01_A02.jpg" style="width:100%">
 				  <img class="mySlides" src="imani-clovis-90059.jpg" style="width:100%">
 				  <img class="mySlides" src="img_mountains_wide.jpg" style="width:100%">
@@ -82,6 +82,47 @@
 				</div>
 		</div>
 
+		<footer class="footer-distributed">
+			<div class="footer-left">
+				<h3>Company<span>logo</span></h3>
+				<p class="footer-links">
+					<a href="index.html">Home</a> ·
+					<a href="about-us.html">About Us</a> ·
+					<a href="current-works.html">Current Works</a> ·
+					<a href="#">Portfolio</a> ·
+					<a href="press.html">Press</a> ·
+					<a href="clients.html">Clients</a>
+				</p>
+				<p class="footer-company-name">Grace Partnership, Inc. &copy; 2017</p>
+				<p class="footer-company-name"> Design / Development by G&J &copy; 2017 </p>
+				<p class="footer-company-name"> ALL RIGHTS RESERVED </p>
+			</div>
+			<div class="footer-center">
+				<div>
+					<i class="fa fa-map-marker"></i>
+					<p><span>550 S. Wilton Ave. </span> Los Angeles, California</p>
+				</div>
+				<div>
+					<i class="fa fa-phone"></i>
+					<p>(213) 387-7788</p>
+				</div>
+				<div>
+					<i class="fa fa-envelope"></i>
+					<p><a href="mailto:info@gpinc.us">info@gpinc.us</a></p>
+				</div>
+			</div>
+			<div class="footer-right">
+				<p class="footer-company-about">
+					<span>About the company</span> Grace Partnership, Inc. is a full service architectural firm with the capacity to materialize projects of all sizes from planning and conceptualization to successful completion.
+				</p>
+				<div class="footer-icons">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-github"></i></a>
+				</div>
+			</div>
+		</footer>
 
 		<script>
 			var slideIndex = 1;
