--- a/index.html
+++ b/index.html
@@ -17,55 +17,51 @@
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 	<body>
-		<div id="maindiv" class="parallax">
+		<div id="maindiv">
 			<nav class="navbar navbar-default navbar-fixed-top">
-					<div class="container-fluid">
-					    <!-- Brand and toggle get grouped for better mobile display -->
-					    <div class="navbar-header">
-					        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					        	<span class="sr-only">Toggle navigation</span>
-					        	<span class="icon-bar"></span>
-					        	<span class="icon-bar"></span>
-					        	<span class="icon-bar"></span>
-					        </button>
-					    </div>
-
-					    <!-- Collect the nav links, forms, and other content for toggling -->
-					    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					        <ul class="nav navbar-nav navbar-right">
-					        	<li><a> Home </a></li>
-					        	<li><a href="about-us.html"> About Us </a></li>
-					        	<li><a href="current-works.html"> Current Works </a></li>
-					        	<li class="dropdown">
-					          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Portfolio <span class="caret"></span></a>
-					          		<ul class="dropdown-menu">
-					            		<li><a href="#">Market</a></li>
-					            		<li><a href="#">Mixed Use</a></li>
-					            		<li><a href="#">Plant / Warehouse</a></li>
-					            		<li><a href="#">Religious</a></li>
-					            		<li><a href="#">Single Family Residential</a></li>
-					            		<li><a href="#">Multi-Family Residential</a></li>
-					            		<li><a href="#">Restaurant</a></li>
-					            		<li><a href="#">Retail</a></li>
-					          		</ul>
-					        	</li>
-					        	<li> <a href="clients.html"> Clients </a> </li>
-					        	<li><a href="#"> Press </a></li>
-					        	<li><a href="contact-us.html"> Contact Us </a></li>
-					      	</ul>
-					    </div><!-- /.navbar-collapse -->
-					</div><!-- /.container-fluid -->
-				</nav> 
-			<div id="header">
-				<h1> <strong> Grace Partnership, Inc. </strong> </h1>
+				<div class="container-fluid">
+				    <div class="navbar-header">
+				      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>                        
+				      </button>
+				      <a class="navbar-brand" href="#myPage">LOGO</a>
+				    </div>
+				    <div class="collapse navbar-collapse" id="myNavbar">
+				      	<ul class="nav navbar-nav navbar-right">
+				        	<li><a> HOME </a></li>
+					        <li><a href="about-us.html"> ABOUT US </a></li>
+					        <li><a href="current-works.html"> CURRENT WORKS </a></li>
+					        <li class="dropdown">
+					          	<a class="dropdown-toggle" data-toggle="dropdown" href="#"> PORTFOLIO <span class="caret"></span></a>
+					          	<ul class="dropdown-menu">
+					            	<li><a href="#">MARKET</a></li>
+					            	<li><a href="#">MIXED USE</a></li>
+					            	<li><a href="#">PLANT / WAREHOUSE</a></li>
+					            	<li><a href="#">RELIGIOUS</a></li>
+					            	<li><a href="#">SINGLE FAMILY RESIDENTIAL</a></li>
+					            	<li><a href="#">MULTI-FAMILY RESIDENTIAL</a></li>
+					            	<li><a href="#">RESTAURANT</a></li>
+					            	<li><a href="#">RETAIL</a></li>
+					          	</ul>
+					        </li>
+					        <li> <a href="clients.html"> CLIENTS </a> </li>
+					        <li><a href="press.thml#"> PRESS </a></li>
+					        <li><a href="contact-us.html"> CONTACT US </a></li>
+				     	</ul>
+				   	</div>
+				</div>
+			</nav>
+			<div id="header" class="text">
+				<h1> <strong> GRACE PARTNERSHIP, INC. </strong> </h1>
 			</div>
 		</div>
-		<div id="seconddiv" class="parallax">
+		<div id="seconddiv" class="text">
 			<h1> <strong> Our History </strong> </h1>
 			<h3> <strong> Grace Partnership, Inc. is a full service architectural firm with the capacity to materialize projects of all sizes from planning and conceptualization to successful completion. </strong> </h3>
 			<p> Integrity and competence are our driving philosophy of the firm. Grace Partnership strives to achieve this goal in all aspects and phases regardless of the size of projects. Grace Partnership continues to develop and enrich our expertise and knowledge in innovative design ideas and new construction methods in order to provide the best possible services to clients. Our dedication to the professionalism and integrity will develop mutual respect with our clients making the relationship exciting and enjoyable. Grace Partnership is headed by two partners Leo Cho and Stephen Kim each with distinctive areas of expertise complementing each other in harmony. The team of project managers and designers work efficiently to bring clients’ visions to reality. </p>
 		</div>
-
 		<footer class="footer-distributed">
 			<div class="footer-left">
 				<h3>Company<span>logo</span></h3>
@@ -78,7 +74,6 @@
 					<a href="clients.html">Clients</a>
 				</p>
 				<p class="footer-company-name">Grace Partnership, Inc. &copy; 2017</p>
-				<p class="footer-company-name"> Design / Development by G&J &copy; 2017 </p>
 				<p class="footer-company-name"> ALL RIGHTS RESERVED </p>
 			</div>
 			<div class="footer-center">
