--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html> 
 	<head>
-		<title> About Us </title>
+		<title> Home </title>
 
 		<!-- FONT -->
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -36,14 +36,14 @@
 					        <li class="dropdown">
 					          	<a class="dropdown-toggle" data-toggle="dropdown" href="#"> PORTFOLIO <span class="caret"></span></a>
 					          	<ul class="dropdown-menu">
-					            	<li><a href="#">MARKET</a></li>
-					            	<li><a href="#">MIXED USE</a></li>
-					            	<li><a href="#">PLANT / WAREHOUSE</a></li>
-					            	<li><a href="#">RELIGIOUS</a></li>
-					            	<li><a href="#">SINGLE FAMILY RESIDENTIAL</a></li>
-					            	<li><a href="#">MULTI-FAMILY RESIDENTIAL</a></li>
-					            	<li><a href="#">RESTAURANT</a></li>
-					            	<li><a href="#">RETAIL</a></li>
+					            	<li><a href="#">Market</a></li>
+					            	<li><a href="#">Mixed Use</a></li>
+					            	<li><a href="#">Plant / Warehouse</a></li>
+					            	<li><a href="#">Religious</a></li>
+					            	<li><a href="#">Single Family Residential</a></li>
+					            	<li><a href="#">Multi-Family Residential</a></li>
+					            	<li><a href="#">Restaurant</a></li>
+					            	<li><a href="#">Retail</a></li>
 					          	</ul>
 					        </li>
 					        <li> <a href="clients.html"> CLIENTS </a> </li>
@@ -54,7 +54,7 @@
 				 </div>
 			</nav>
 			<div id="header">
-				<h1> <strong> Principals </strong> </h1>
+				<h1> <strong> Grace Partnership, Inc. </strong> </h1>
 			</div>
 			<div class="firstintro" class="text">
 					<img src="leocho.jpeg" />
