--- a/current-works.html
+++ b/current-works.html
@@ -27,61 +27,59 @@
 	<body>
 		<div id="maindiv" class="parallax">
 			<nav class="navbar navbar-default navbar-fixed-top">
-					<div class="container-fluid">
-					    <!-- Brand and toggle get grouped for better mobile display -->
-					    <div class="navbar-header">
-					        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					        	<span class="sr-only">Toggle navigation </span>
-					        	<span class="icon-bar"> </span>
-					        	<span class="icon-bar"> </span>
-					        	<span class="icon-bar"> </span>
-					        </button>
-					    </div>
-
-					    <!-- Collect the nav links, forms, and other content for toggling -->
-					    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					        <ul class="nav navbar-nav navbar-right">
-					        	<li><a href="index.html"> Home </a></li>
-					        	<li><a href="about-us.html"> About Us </a></li>
-					        	<li><a> Current Works </a></li>
-					        	<li class="dropdown">
-					          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Portfolio <span class="caret"></span></a>
-					          		<ul class="dropdown-menu">
-					            		<li><a href="#">Market</a></li>
-					            		<li><a href="#">Mixed Use</a></li>
-					            		<li><a href="#">Plant / Warehouse</a></li>
-					            		<li><a href="#">Religious</a></li>
-					            		<li><a href="#">Single Family Residential</a></li>
-					            		<li><a href="#">Multi-Family Residential</a></li>
-					            		<li><a href="#">Restaurant</a></li>
-					            		<li><a href="#">Retail</a></li>
-					          		</ul>
-					        	</li>
-					        	<li> <a href="clients.html"> Clients </a> </li>
-					        	<li><a href="press.html"> Press </a></li>
-					        	<li><a href="contact-us.html"> Contact Us </a></li>
-					      	</ul>
-					    </div><!-- /.navbar-collapse -->
-					</div><!-- /.container-fluid -->
-				</nav> 
+				<div class="container-fluid">
+				    <div class="navbar-header">
+				      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>                        
+				      </button>
+				      <a class="navbar-brand" href="#myPage">LOGO</a>
+				    </div>
+				    <div class="collapse navbar-collapse" id="myNavbar">
+				      	<ul class="nav navbar-nav navbar-right">
+				        	<li><a href="index.html"> HOME </a></li>
+					        <li><a href="about-us.html"> ABOUT US </a></li>
+					        <li><a> CURRENT WORKS </a></li>
+					        <li class="dropdown">
+					          	<a class="dropdown-toggle" data-toggle="dropdown" href="#"> PORTFOLIO <span class="caret"></span></a>
+					          	<ul class="dropdown-menu">
+					            	<li><a href="#">MARKET</a></li>
+					            	<li><a href="#">MIXED USE</a></li>
+					            	<li><a href="#">PLANT / WAREHOUSE</a></li>
+					            	<li><a href="#">RELIGIOUS</a></li>
+					            	<li><a href="#">SINGLE FAMILY RESIDENTIAL</a></li>
+					            	<li><a href="#">MULTI-FAMILY RESIDENTIAL</a></li>
+					            	<li><a href="#">RESTAURANT</a></li>
+					            	<li><a href="#">RETAIL</a></li>
+					          	</ul>
+					        </li>
+					        <li> <a href="clients.html"> CLIENTS </a> </li>
+					        <li><a href="press.thml#"> PRESS </a></li>
+					        <li><a href="contact-us.html"> CONTACT US </a></li>
+				     	</ul>
+				   	</div>
+				</div>
+			</nav>
 			<div id="header">
 				<h1> <strong> Current Works </strong> </h1>
 			</div>
-		<div id="slide1">
-			<div class="w3-content w3-display-container" style="max-width:400px, height:300px">
-				  <img class="mySlides" src="GP_GKC_v01_A02.jpg" style="width:100%">
-				  <img class="mySlides" src="imani-clovis-90059.jpg" style="width:100%">
-				  <img class="mySlides" src="img_mountains_wide.jpg" style="width:100%">
-				  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-				    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-				    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-				    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-				    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-				    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-				  </div>
+			<div id="slide1">
+				<div class="w3-content w3-display-container">
+					<h5> Title </h5>
+					<img class="mySlides" src="GP_GKC_v01_A02.jpg">
+					<img class="mySlides" src="imani-clovis-90059.jpg">
+					<img class="mySlides" src="img_mountains_wide.jpg">
+					<div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+						<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+					 	<div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+					</div>
 				</div>
+			</div>
 		</div>
-
 		<footer class="footer-distributed">
 			<div class="footer-left">
 				<h3>Company<span>logo</span></h3>
