--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>                        
 				      </button>
-				      <a class="navbar-brand" href="#myPage">LOGO</a>
+				      <a class="navbar-brand" href="#myPage">GRACE PARTNERSHIP, INC.</a>
 				    </div>
 				    <div class="collapse navbar-collapse" id="myNavbar">
 				      	<ul class="nav navbar-nav navbar-right">
@@ -53,8 +53,50 @@
 				   	</div>
 				</div>
 			</nav>
-			<div id="header" class="text">
-				<h1> <strong> GRACE PARTNERSHIP, INC. </strong> </h1>
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			    <!-- Indicators -->
+			    <ol class="carousel-indicators">
+			      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			      <li data-target="#myCarousel" data-slide-to="1"></li>
+			      <li data-target="#myCarousel" data-slide-to="2"></li>
+			    </ol>
+
+			    <!-- Wrapper for slides -->
+			    <div class="carousel-inner" role="listbox">
+			      <div class="item active">
+			        <img src="GP_GKC_v01_A02.jpg">
+			        <div class="carousel-caption">
+			          <h3>GKC Parsonage</h3>
+			          <p> Fullerton, CA </p>
+			        </div>      
+			      </div>
+
+			      <div class="item">
+			        <img src="GP_GKC_v01_A02.jpg">
+			        <div class="carousel-caption">
+			          <h3>GKC</h3>
+			          <p> Fullerton, CA </p>
+			        </div>      
+			      </div>
+			    
+			      <div class="item">
+			        <img src="GP_GKC_v01_A02.jpg">
+			        <div class="carousel-caption">
+			          <h3> GKC </h3>
+			          <p> Fullerton, CA </p>
+			        </div>      
+			      </div>
+			    </div>
+
+			    <!-- Left and right controls -->
+			    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+			      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			      <span class="sr-only">Previous</span>
+			    </a>
+			    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+			      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			      <span class="sr-only">Next</span>
+			    </a>
 			</div>
 		</div>
 		<div id="seconddiv" class="text">
