--- a/current-works.html
+++ b/current-works.html
@@ -34,7 +34,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>                        
 				      </button>
-				      <a class="navbar-brand" href="#myPage">LOGO</a>
+				      <a class="navbar-brand" href="#myPage">GRACE PARTNERSHIP, INC.</a>
 				    </div>
 				    <div class="collapse navbar-collapse" id="myNavbar">
 				      	<ul class="nav navbar-nav navbar-right">
@@ -61,24 +61,39 @@
 				   	</div>
 				</div>
 			</nav>
+
 			<div id="header">
 				<h1> <strong> Current Works </strong> </h1>
 			</div>
-			<div id="slide1">
-				<div class="w3-content w3-display-container">
-					<h5> Title </h5>
-					<img class="mySlides" src="GP_GKC_v01_A02.jpg">
-					<img class="mySlides" src="imani-clovis-90059.jpg">
-					<img class="mySlides" src="img_mountains_wide.jpg">
-					<div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-						<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-					 	<div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-					    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-					</div>
-				</div>
+			
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext">John Doe</div>
+			  	</div>
 			</div>
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext">John Doe</div>
+			  	</div>
+			</div>
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext">John Doe</div>
+			  	</div>
+			</div>
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext">John Doe</div>
+			  	</div>
+			</div>
+
+
+
+
 		</div>
 		<footer class="footer-distributed">
 			<div class="footer-left">
@@ -92,7 +107,6 @@
 					<a href="clients.html">Clients</a>
 				</p>
 				<p class="footer-company-name">Grace Partnership, Inc. &copy; 2017</p>
-				<p class="footer-company-name"> Design / Development by G&J &copy; 2017 </p>
 				<p class="footer-company-name"> ALL RIGHTS RESERVED </p>
 			</div>
 			<div class="footer-center">
@@ -122,34 +136,7 @@
 			</div>
 		</footer>
 
-		<script>
-			var slideIndex = 1;
-			showDivs(slideIndex);
-
-			function plusDivs(n) {
-			  showDivs(slideIndex += n);
-			}
-
-			function currentDiv(n) {
-			  showDivs(slideIndex = n);
-			}
-
-			function showDivs(n) {
-			  var i;
-			  var x = document.getElementsByClassName("mySlides");
-			  var dots = document.getElementsByClassName("demo");
-			  if (n > x.length) {slideIndex = 1}    
-			  if (n < 1) {slideIndex = x.length}
-			  for (i = 0; i < x.length; i++) {
-			     x[i].style.display = "none";  
-			  }
-			  for (i = 0; i < dots.length; i++) {
-			     dots[i].className = dots[i].className.replace(" w3-white", "");
-			  }
-			  x[slideIndex-1].style.display = "block";  
-			  dots[slideIndex-1].className += " w3-white";
-			}
-		</script>
+	
 	 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
