--- a/current-works.html
+++ b/current-works.html
@@ -69,30 +69,57 @@
 			<div class="container">
 			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
 			  	<div class="middle">
-			    	<div class="imagetext">John Doe</div>
+			    	<div class="imagetext">GKC Partonage</div>
 			  	</div>
 			</div>
 			<div class="container">
 			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
 			  	<div class="middle">
-			    	<div class="imagetext">John Doe</div>
+			    	<div class="imagetext"></div>
 			  	</div>
 			</div>
 			<div class="container">
 			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
 			  	<div class="middle">
-			    	<div class="imagetext">John Doe</div>
+			    	<div class="imagetext"></div>
 			  	</div>
 			</div>
 			<div class="container">
 			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
 			  	<div class="middle">
-			    	<div class="imagetext">John Doe</div>
+			    	<div class="imagetext"></div>
 			  	</div>
 			</div>
-
-
-
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext"></div>
+			  	</div>
+			</div>
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext"></div>
+			  	</div>
+			</div>
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext"></div>
+			  	</div>
+			</div>
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext"></div>
+			  	</div>
+			</div>
+			<div class="container">
+			    <img src="GP_GKC_v01_A02.jpg" alt="Avatar" class="image">
+			  	<div class="middle">
+			    	<div class="imagetext"></div>
+			  	</div>
+			</div>
 
 		</div>
 		<footer class="footer-distributed">
